--- a/pages/bootcamp/bootcamp.html
+++ b/pages/bootcamp/bootcamp.html
@@ -1,3 +1,11 @@
-<h1>Bootcamp 3.0</h1>
+<!-- Title: Bootcamp -->
 
-Welcome to the bootcamp, guys!
+<h1>Bootcamp 5.0</h1>
+
+[button]Click me[/button]
+[gallery]
+
+<button>Click me</button>
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt velit fugit dicta ea, cupiditate amet voluptatem. Ex,
+ipsa iste consequatur sapiente aspernatur omnis provident aliquid inventore dicta quam voluptate voluptates.
